<resources>
    <string name="app_name">Colladia</string>

    <!-- Strings related to login -->
    <string name="prompt_user_login">User name</string>
    <string name="prompt_server_address">Server address</string>
    <string name="action_sign_in">Connect</string>
    <string name="action_sign_in_short">Connect</string>
    <string name="error_invalid_user_login">This user login is invalid</string>
    <string name="error_invalid_address">This server address is invalid</string>
    <string name="error_incorrect_address">No response from requested server</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_draw">DrawActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="shape_circle">Cercle</string>
    <string name="shape_square">Rectangle</string>
    <string name="shape_class">Classe</string>
    <string name="shape_text">Zone de texte</string>

    <string name="action_settings">Settings</string>
    <string name="nav_menu_home_back">Back</string>
<<<<<<< HEAD
    <string name="nav_position">Repositionner</string>
    <string name="title_activity_workspaces_list">WorkspacesListActivity</string>
    <string name="text">Texte</string>

=======
    <string name="square">Square</string>
    <string name="circle">Circle</string>
    <string name="triangle">Triangle</string>
    <string name="classe">Classe</string>
    <string name="line">Simple</string>
    <string name="arrow">Arrow</string>
    <string name="doubleArrow">Double Arrow</string>
    <string-array name="menu_titles">
        <item>Forme</item>
        <item>Texte</item>
        <item>Exemple</item>
    </string-array>

    <array name="icons">
        <item></item>
        <item></item>
    </array>
    <string name="title_activity_worspaces_list">Workspaces</string>
    <string name="text">Text</string>
    <string name="access_button">Access</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_title">Delete diagram </string>
    <string name="add_diagram_button">Add</string>
    <string name="add_diagram_title">Add a new diagram</string>
    <string name="nav_menu_auto_position">Auto</string>
>>>>>>> ac41158f048c6864eeb971f24cb1d5ac222cacbb
</resources>
